* libltdl/ltdl.c (lt_dlcaller_register): Caller ids are allocated starting from value `1', so that clients can use a value of zero to indicate that libltdl has not yet initialised.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-08-14  Gary V. Vaughan  <gary@gnu.org>
 
+	* libltdl/ltdl.c (lt_dlcaller_register): Caller ids are allocated
+	starting from value `1', so that clients can use a value of zero
+	to indicate that libltdl has not yet initialised.
+
 	* ltmain.in (exec_cmd): Fix quoting in execute mode so that the
 	double quotes added by libtool (to prevent lossage with embedded
 	spaces in filenames etc.) are not interpreted as literals by the
