--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-09-03  Brad  <brad@comstyle.com>
+
+	* libtool.m4 (deplibs_check_method) [aix*]: Removed redundant
+	setting of this variable.
+
 2001-09-02  Gary V. Vaughan  <gary@gnu.org>
 
 	From Albert Chin <china@thewrittenword.com>:
