--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-03  Brad  <brad@comstyle.com>
+
+	* libtool.m4 [openbsd*]: More improvements to the OpenBSD port.
+
 2001-09-02  Gary V. Vaughan  <gary@gnu.org>
 
 	From Albert Chin <china@thewrittenword.com>:
