--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-03  Gary V. Vaughan  <gary@gnu.org>
+
+	From Marius Vollmer <mvo@zagadka.ping.de>:
+	* libltdl/ltdl.c (tryall_dlopen_module): Don't forget to propogate
+	errors over recurse levels.
+
 2001-09-03  Brad  <brad@comstyle.com>
 
 	* libtool.m4 [openbsd*]: More improvements to the OpenBSD port.
