--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.4.1: 2001-??-??; CVS version 1.4.0a, Libtool team:
+New in 1.4.1: 2001-09-03; CVS version 1.4.0a, Libtool team:
 * Better error messages from libltdl when loading fails.
 * Don't leave here-doc files behind.
 * Improved support for OpenBSD.
