* configure.in: Bumped version to 1.4.1a.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-09-03  Gary V. Vaughan  <gary@gnu.org>
 
+	* configure.in: Bumped version to 1.4.1a.
+
 	GNU libtool 1.4.1 was released.
 
 	* configure.in: Bumped version to 1.4.1.
