--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-05  Robert Boehne  <rboehne@ricardo-us.com>
+
+	* pdemo/Makefile.am (helldl):  Automake 1.4 can't find the target
+	if we use helldl$(EXEEXT), and Automake 1.5 barfs unless we do.
+	Using both targets to the left of the colon seems to work though!
+
 2001-09-03  Gary V. Vaughan  <gary@gnu.org>
 
 	* demo/Makefile.am (helldl):  Automake 1.4 can't find the target
