--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-06  Gary V. Vaughan  <gary@gnu.org>
+
+	From Daniel Johnson <danielj7@mac.com>:
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [darwin*]: Move from GNU
+	ld section to non-GNU ld section.
+
 2001-09-05  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* pdemo/Makefile.am (helldl):  Automake 1.4 can't find the target
