--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-09-07  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/ltdl.c (foreach_dirinpath): argz_len should be a size_t.
+	Reported by Albert Chin <china@thewrittenword.com>
+
 2001-09-06  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtool.m4 (archive_cmds, archive_expsym_cmds) [solaris*]: Changing
