--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-07  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtool.m4 (archive_cmds, archive_expsym_cmds) [solaris*]: Revert
+	my 2001-09-06 patch.
+	(no_undefined_flag)i [solaris*]: Revert Alexandre's 2001-04-11 patch.
+
 	* libltdl/acconfig.h:  Removed.  Obsoleted with modern Automake
 	(i.e. 1.4 or better).
 
