--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-08  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtool.m4 (archive_cmds, archive_expsym_cmds) [solaris*]: Revert
+	my 2001-09-06 patch.
+	(no_undefined_flag)i [solaris*]: Revert Alexandre's 2001-04-11 patch.
+
 2001-09-07  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/ltdl.c (foreach_dirinpath): argz_len should be a size_t.
