--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-09-08  Gary V. Vaughan  <gary@gnu.org>
 
+	* bootstrap: Cleanup `autom4te' and `libtool' so that we don't
+	get caught by something from a previous build.
+
 	* libtool.m4 (archive_cmds, archive_expsym_cmds) [solaris*]: Revert
 	my 2001-09-06 patch.
 	(no_undefined_flag)i [solaris*]: Revert Alexandre's 2001-04-11 patch.
