From Brad <brad@comstyle.com>: * doc/libtool.texi: Remove obsolete references to ltconfig. * tests/quote.test: s/ltconfig/$0/

--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3873,7 +3873,7 @@ Finally, send a bug report to @value{BUGADDR} with any appropriate
 the details needed to reproduce the bug, and a brief description of why
 you think the behaviour is a bug.  Be sure to include the word
 ``libtool'' in the subject line, as well as the version number you are
-using (which can be found by typing @kbd{ltconfig --version}).
+using (which can be found by typing @kbd{libtool --version}).
 
 @node Maintaining
 @chapter Maintenance notes for libtool
