--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-10  Gary V. Vaughan  <gary@gnu.org>
+
+	From Brad <brad@comstyle.com>:
+	* doc/libtool.texi: Remove obsolete references to ltconfig.
+	* tests/quote.test: s/ltconfig/\$0/
+
 2001-09-09  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtool.m4: Use Autoconf square bracket quoting style
